--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 Santiago Gonzalez
 
-This is the git repo for CSCI446 at Colorado School of Mines.
+This is the git repo for CSCI446 at Colorado School of Mines. Taught by Professor Yong Bakos during Spring 2012.
